# project-R

./: README.md  build_package.py  extract_and_compile.py  extract_thesis.py  pyproject.toml  search_logs.py  technical_note.md
RealityOS/: __init__.py  sdk.py
RealityOS/api/: __init__.py  reality_api.py
RealityOS/demos/: __init__.py  benchmark_acn_vs_kkt.py  benchmark_vs_transformer.py  demo_state_computing.py  kitchen_world.py  multi_agent_factory.py  robot_manipulation.py
RealityOS/fabric/: __init__.py  cognitive_fabric.py  energy_manager.py  knowledge_compiler.py  multi_timescale_brain.py  priority_scheduler.py
RealityOS/kernel/: __init__.py  ace_engine.py  adaptive_interaction.py  aether_kernel.py  calculus.py  causal_engine.py  cognitive_field.py  cognitive_state.py  event_engine.py  evidence.py  evolution.py  locality_field.py  locality_proof.py  operator_algebra.py  reality_atom.py  relation_engine.py  relational_engine.py  spatial_index.py  state_transition.py  temporal_engine.py  world_partition.py
RealityOS/memory/: __init__.py  episodic_memory.py  procedural_memory.py  reality_compression.py  semantic_memory.py  working_memory.py
RealityOS/runtimes/: __init__.py  base_runtime.py  learning_runtime.py  physics_runtime.py  planning_runtime.py
RealityOS/universe/: __init__.py  simulation_layer.py
camp/: alert_engine.py
camp/api/: server.py
camp/core/: agent_watcher.py  self_model.py
camp/demo/: simulate_agents.py
camp/tests/: test_ace_engine.py  test_acn_solver.py  test_aether_kernel.py  test_agent_watcher.py  test_capacity_conservation.py  (+4 more)
