[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realityos"
version = "0.1.0"
description = "State Computing: The Operating System for Stateful Intelligence"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.30.0",
    "psutil>=5.9.0",
]

[project.scripts]
camp-watch = "camp.cli.watch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["RealityOS*", "camp*"]
exclude = ["camp.tests*"]
